// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account renders correctly 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "paddingBottom": 20,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
              "marginBottom": 10,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                Object {
                  "alignSelf": "center",
                  "margin": "auto",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  Object {
                    "backgroundColor": "#7AD6FE",
                    "borderRadius": 20,
                    "height": 40,
                    "width": 40,
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/unknown-user-icon.png",
                  }
                }
                style={
                  Array [
                    Object {
                      "alignSelf": "center",
                      "margin": "auto",
                    },
                    Object {
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              />
            </View>
          </View>
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Object {
                  "marginHorizontal": 20,
                  "paddingTop": 6,
                  "textAlign": "center",
                },
              ]
            }
          >
            John Doe
          </Text>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Light",
                "fontSize": 14,
                "lineHeight": 18,
                "marginTop": 8,
              }
            }
          >
            0x0000000000000000000000000000000000007E57
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        hitSlop={
          Object {
            "bottom": 7,
            "left": 7,
            "right": 7,
            "top": 7,
          }
        }
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 2,
              "minWidth": 160,
              "paddingHorizontal": 16,
              "paddingVertical": 6,
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#42D689",
              "borderWidth": 2,
            },
            Object {
              "alignSelf": "center",
              "marginTop": 10,
            },
          ]
        }
        testID="editProfileButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#81868B",
                "fontFamily": "Hind-SemiBold",
                "fontSize": 13,
                "lineHeight": 17,
              },
              Object {
                "lineHeight": 20,
              },
              Object {
                "color": "#42D689",
              },
              undefined,
            ]
          }
        >
          editProfile
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "borderColor": "#EEEEEE",
          "borderTopWidth": 1,
          "flex": 1,
          "paddingLeft": 20,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              backupKey
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              invite
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              analytics
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              languageSettings
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              localCurrencySetting
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              licenses
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              sendIssueReport
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "marginTop": 30,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Test FAQ is 
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Object {
                  "color": "#42D689",
                  "fontFamily": "Hind-Medium",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                  },
                ],
              ]
            }
          >
            here
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Terms of service are 
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Object {
                  "color": "#42D689",
                  "fontFamily": "Hind-Medium",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                  },
                ],
              ]
            }
          >
            here
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Account when dev mode active renders correctly 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "paddingBottom": 20,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
              "marginBottom": 10,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                Object {
                  "alignSelf": "center",
                  "margin": "auto",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  Object {
                    "backgroundColor": "#7AD6FE",
                    "borderRadius": 20,
                    "height": 40,
                    "width": 40,
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/unknown-user-icon.png",
                  }
                }
                style={
                  Array [
                    Object {
                      "alignSelf": "center",
                      "margin": "auto",
                    },
                    Object {
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              />
            </View>
          </View>
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Object {
                  "marginHorizontal": 20,
                  "paddingTop": 6,
                  "textAlign": "center",
                },
              ]
            }
          >
            John Doe
          </Text>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Light",
                "fontSize": 14,
                "lineHeight": 18,
                "marginTop": 8,
              }
            }
          >
            0x0000000000000000000000000000000000007E57
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        hitSlop={
          Object {
            "bottom": 7,
            "left": 7,
            "right": 7,
            "top": 7,
          }
        }
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 2,
              "minWidth": 160,
              "paddingHorizontal": 16,
              "paddingVertical": 6,
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#42D689",
              "borderWidth": 2,
            },
            Object {
              "alignSelf": "center",
              "marginTop": 10,
            },
          ]
        }
        testID="editProfileButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#81868B",
                "fontFamily": "Hind-SemiBold",
                "fontSize": 13,
                "lineHeight": 17,
              },
              Object {
                "lineHeight": 20,
              },
              Object {
                "color": "#42D689",
              },
              undefined,
            ]
          }
        >
          editProfile
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "borderColor": "#EEEEEE",
          "borderTopWidth": 1,
          "flex": 1,
          "paddingLeft": 20,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              backupKey
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              invite
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              analytics
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              languageSettings
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              localCurrencySetting
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              licenses
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#EEEEEE",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": 15,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              sendIssueReport
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <svg
              height={16}
              style={Object {}}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.70376 9.12461L2.12123 15.7071C1.73071 16.0976 1.09755 16.0976 0.707015 15.7071C0.316497 15.3166 0.316497 14.6834 0.707015 14.2929L6.58575 8.41419L0.707091 2.53553C0.316573 2.14501 0.316573 1.51185 0.707091 1.12131C1.09761 0.730797 1.73079 0.730797 2.12131 1.12131L8.70708 7.70708C9.0976 8.09762 9.0976 8.73078 8.70708 9.1213L8.70376 9.12461Z"
                fill="#42D689"
                style={Object {}}
              />
            </svg>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "marginHorizontal": 10,
          "padding": 15,
        }
      }
    >
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "margin": 4,
          }
        }
      >
        <Text>
          Dev Settings
        </Text>
        <View>
          <Text>
            Checking Verification
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "margin": 4,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text>
            Revoke Number Verification
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "margin": 4,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text>
            Reset app opened state
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "margin": 4,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text>
            Show Debug Screen
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "margin": 4,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text>
            Trigger a crash
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "marginTop": 30,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Test FAQ is 
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Object {
                  "color": "#42D689",
                  "fontFamily": "Hind-Medium",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                  },
                ],
              ]
            }
          >
            here
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Terms of service are 
        </Text>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Object {
                  "color": "#42D689",
                  "fontFamily": "Hind-Medium",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-SemiBold",
                  },
                ],
              ]
            }
          >
            here
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
